force-app/main/default/objects/QTB_Billing_Account_OS__e/QTB_Billing_Account_OS__e.object-meta.xml
<CustomObject>
    <description>#SFCPQBLG-45 - Billing Account OS Event</description>
    <label>Billing Account OS Event</label>
    <pluralLabel>Billing Account OS Event</pluralLabel>
</CustomObject>