force-app/main/default/objects/QTB_Billing_Account_OS__e/fields/QTB_CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>QTB_CreatedDate__c</fullName>
    <description>#SFCPQBLG-48</description>
    <label>Created Date</label>
    <type>DateTime</type>
</CustomField>