force-app/main/default/objects/QTB_Billing_Account_OS__e/fields/QTB_Data_Management__c.field-meta.xml
<CustomField>
    <fullName>QTB_Data_Management__c</fullName>
    <description>#SFCPQBLG-45</description>
    <label>Data Management</label>
    <length>5</length>
    <type>Text</type>
</CustomField>