force-app/main/default/objects/QTB_Billing_Account_OS__e/fields/QTB_Department__c.field-meta.xml
<CustomField>
    <fullName>QTB_Department__c</fullName>
    <description>#SFCPQBLG-45</description>
    <label>Department</label>
    <length>80</length>
    <type>Text</type>
</CustomField>