force-app/main/default/objects/QTB_Billing_Account_OS__e/fields/QTB_LastModifiedBy__c.field-meta.xml
<CustomField>
    <fullName>QTB_LastModifiedBy__c</fullName>
    <description>#SFCPQBLG-45</description>
    <label>LastModifiedBy</label>
    <length>100</length>
    <type>Text</type>
</CustomField>