force-app/main/default/objects/QTB_Billing_Account_OS__e/fields/QTB_LastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>QTB_LastModifiedDate__c</fullName>
    <description>#SFCPQBLG-45</description>
    <label>LastModifiedDate</label>
    <type>DateTime</type>
</CustomField>