force-app/main/default/objects/QTB_Billing_Account_OS__e/fields/QTB_Name__c.field-meta.xml
<CustomField>
    <fullName>QTB_Name__c</fullName>
    <description>#SFCPQBLG-45</description>
    <label>Account Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>