force-app/main/default/objects/QTB_Billing_Account_OS__e/fields/QTB_scan__c.field-meta.xml
<CustomField>
    <fullName>QTB_scan__c</fullName>
    <description>#SFCPQBLG-45 :for platform event</description>
    <label>Scan</label>
    <length>5</length>
    <type>Text</type>
</CustomField>